--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "firebase-admin": "^9.4.2"
+    "firebase-admin": "^9.4.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
