--- a/iOSApp/Podfile
+++ b/iOSApp/Podfile
@@ -8,6 +8,7 @@ target 'nwHacks2021' do
   # Pods for nwHacks2021
 
   pod 'Alamofire', '~> 5.2'
+  pod 'SwiftyJSON', '~> 4.0'
 
   target 'nwHacks2021Tests' do
     inherit! :search_paths
